GNOME Mines 49.0.1
=====================

* Update libgnome-games (Michael Catanzaro)

GNOME Mines 49.0
=====================

* Updated translations
* Update libgnome-games (Michael Catanzaro)

GNOME Mines 49.rc
=====================

* Updated translations
* Updated screenshot (Yoav Morag)
* Use libgnome-games as subproject (Will Warner)
* Unparent minefield view aspect frame (Michael Catanzaro)

GNOME Mines 49.beta
=====================

* Updated translations
* Added new theme (Hexon)
* Replaced timer icon (Hexon)
* Use libadwaita and support dark theme (Will Warner)
* Use custom modulon instead of standard operator (Nathan Gill)
* Fix invalid cast after libadwaita port (Michael Catanzaro)
* Fix about dialog, fix help url (Will Warner)
* Fix broken resizing (Will Warner)
* Port to AdwShortcutsDialog (Urtsi Santsi)
* Use new score dialog (Will Warner)

GNOME Mines 48.1
=====================

* Fixed running app as GApplication service (Balló György)
* Fixed save settings on close (Balló György)
* Make the application d-bus activatable (Balló György)

GNOME Mines 48.0
=====================

* Updated translations

GNOME Mines 48.alpha
=====================

* Updated translations
* Fixed proprietary license in appdata #71 (Robert Roth)
* Compilation fixes (Rico Tzschichholz)
* Made header tooltips translatable (Robert Roth)
* Replaced old links with discourse (Andre Klapper)
* Updated appdata (Sabri Ünal)
* Fix icon name (Balló György)
* Fix flatpak build (Robert Roth)
* Migrated to GTK4 (Arnaud B., Maximiliano)

GNOME Mines 40.0
=====================

* Updated translations

GNOME Mines 40.rc
=====================

* Updated translations

GNOME Mines 40.alpha
=====================

* Updated translations
* Updated help
* Code cleanup and modernization (Arnaud Bonatti)
* Keyboard shortcuts window improvements (Sabri Ünal, Robert Roth) 
* Only allow long-press gesture on touchscreen #50 (Robert Roth)
* Fixed icon in scores dialog (Arnaud Bonatti)