@@ -1,3 +1,10 @@
+GNOME Mines 50.beta
+=====================
+
+* Updated translations
+* Updated metainfo links (Sabri Ünal)
+* Update libgnome-games (Will Warner)
+
 GNOME Mines 49.0.1
 =====================
 
